# anime-bot

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/bot/handlers/: user_handlers.py
src/bot/keyboards/: user_keyboards.py
src/bot/services/: cache_manager.py  data_processing.py  mal_api.py
src/bot/tests/: test_mal_services.py
