[project]
name = "anime-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anime-bot"
packages = [
    { include = "src" }
]